fix textbox alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,4 +22,6 @@
   .message.error {
     color: red;
   }
-  
+  .css-1g68t7m{
+    margin-top: 0.5%;
+  }
